add reviewers to the cover letter

--- a/manuscript/cover_letter/cover_letter.org
+++ b/manuscript/cover_letter/cover_letter.org
@@ -91,9 +91,15 @@ to do so.
 
 We suggest the following individuals as reviewers:
 
-1. 
-2. 
-3. 
+1. Michael J. Soares <msoares@kumc.edu> Professor of Pathology at the
+   University of Kansas
+2. Jay Cross <jcross@ucalgary.ca> Professor of Molecular Genetics at the
+   University of Calgary
+3. Ashley Moffet <am485@cam.ac.uk> Professor of Pathology at the
+   University Cambridge
+4. Chris Burge <cburge@mit.edu> Professor of Biology and Biological
+   Engineering at MIT
+
 
 Thank you for your consideration; we look forward to publishing in
 your journal.
