--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -2453,6 +2453,13 @@ to collecting and analyzing such a dataset.
   publicly available data contributed to the completeness of this
   work.
 
+  \section*{Funding}
+  Partial support for this research came from the \textit{Eunice
+    Kennedy Shriver} National Institute of Child Health and Human
+  Development (NICHD), National Institutes of Health, U.S. Department
+  of Health and Human Services (N01-HD-3342), and the National Science
+  Foundation BCS-0827546.
+
   \printaddresses
 
 \end{backmatter}
