--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -183,8 +183,8 @@ grad.def <- list(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = NA
 \dochead{Research}%
 \title{The evolution of gene expression in the term placenta of viviparous mammals}%
 %
-\author[addressref={aff1},email={don@donarmstrong.com}]{\inits{DL}\fnm{Don L} \snm{Armstrong}}
-\author[addressref={aff2},email={1mmcgowen1@gmail.com}]{\inits{MR}\fnm{Michael R.} \snm{McGowen}}
+\author[addressref={aff1},email={don@donarmstrong.com},noteref={n1}]{\inits{DL}\fnm{Don L} \snm{Armstrong}}
+\author[addressref={aff2},email={1mmcgowen1@gmail.com},noteref={n1}]{\inits{MR}\fnm{Michael R.} \snm{McGowen}}
 \author[addressref={aff1},email={aweckle@illinois.edu}]{\inits{AL}\fnm{Amy} \snm{Weckle}}
 \author[addressref={aff3},email={jacaravas@gmail.com}]{\inits{J}\fnm{Jason} \snm{Caravas}}
 \author[addressref={aff4},email={agnewd@dcpah.msu.edu}]{\inits{D}\fnm{Dalen} \snm{Agnew}}
@@ -208,6 +208,10 @@ grad.def <- list(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = NA
 \address[id=aff11]{The Institute of Evolution, University of Haifa, Haifa, Israel}
 
 \begin{artnotes}
+\end{artnotes}
+
+\begin{artnotes}
+\note[id=n1]{Equal contributor} % note, connected to author
 \end{artnotes}
 
 \end{fmbox}
